# Chess

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
chess/: __init__.py  __main__.py  game.py  moves.py  pieces.py  players.py  state.py
