[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Chess..."
authors = ["Jonxslays"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "~=2.1.0"

[tool.poetry.dev-dependencies]
pyright = "~=0.0.13"
black = "~=21.12b0"
isort = "~=5.10.1"
mypy = "~=0.910"
nox = "~=2021.10.1"
len8 = "~=0.6.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.len8]
include = ["chess"]
code-length = 88
docs-length = 72
strict = true

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
reportImportCycles = false
include = ["chess"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
